--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -17,7 +18,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
     "express": "^4.17.1"
