--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.6",
     "tsc": "^1.20150623.0",
-    "typescript": "^4.2.3",
-    "uuid": "^8.3.2"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "csv-parse": "^4.15.3",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2"
   }
 }
