--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "csv-parse": "^4.15.3",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   }
 }
