--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,7 @@
 {
     "type": "postgres",
     "host": "localhost",
+    "port": 5432,
     "username": "docker",
     "password": "ignite",
     "database": "rentalx",
