--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "ts-jest": "^26.5.4",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.1",
     "csv-parse": "^4.15.3",
+    "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -44,6 +44,7 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
+    "ts-jest": "^26.5.4",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
