--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "devDependencies": {
+    "@types/supertest": "^2.0.11",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
@@ -44,6 +45,7 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
